# raymarched-backgrounds

./: CMakeLists.txt  README.md
.cache/clangd/index/: FastNoiseLite.h.F4148F4A07766CA0.idx  consts.h.6644DCB9766C549D.idx  image.cpp.C9790FFDA017BAB6.idx  image.h.767943C89C228C16.idx  main.cpp.1AD96084398E4625.idx  ray.cpp.1C4FDC119EFD2EFD.idx  ray.h.7095857A70BC8BE1.idx  renderer.cpp.5C8060335C084395.idx  renderer.h.924DE2F75CA4FAA6.idx  sdf.cpp.2980B9540D8E78C5.idx  sdf.h.F8506603DAA69618.idx
bins/: vector_visuals.cpp
src/: consts.h  image.cpp  image.h  main.cpp  rand.cpp  rand.h  ray.cpp  ray.h  renderer.cpp  renderer.h  sdf.cpp  sdf.h
